# probabilistic_mapping_extention

./: .gitignore  README.md  compute_p_me_t.py  extend_p_me_t.py  pyproject.toml  t_type_alignement.py  tools.py
densities_app/: Validation_compute_m_type_gene_expressions.ipynb  extended p_map for cell atlas pipeline.ipynb  parcellation_to_parcellation_term_membership_extend.csv  scaled_densities_new.pickle  scaled_densities_t_types_as_keys.pickle  t_type_gene_expression.csv  visualisation_multiproc.ipynb
densities_app/.ipynb_checkpoints/: Validation_compute_m_type_gene_expressions-checkpoint.ipynb  extended p_map for cell atlas pipeline-checkpoint.ipynb  p_map_for_cellatlas_pipeline-checkpoint.py  visualisation_multiproc-checkpoint.ipynb
experimental_data/: README.md  exec.txt
experimental_data/canonical m-types/: test_cluster.csv
experimental_data/e_features/: dl_e_features.sh  m1_patchseq_phys_temp_meta_data.csv
experimental_data/scala/: m1_patchseq_meta_data.csv
experimental_data/yao/: download_rna.sh
extension/: annotation_25_2022_CCFv3a.nrrd
extension/data/: brain__with_unassigned_regions_e_types_composition.csv  brain_regions_e_types_composition.csv  brain_regions_m_types_composition.csv
extension/laminar_validation/: data.csv  mtype_collapse_viz.py  mtype_viz.py
extension/notebooks/: compare_your_data.ipynb  create_all_celltype_df.ipynb  transcribing_t_types.ipynb  (+6 more)
probability_map/: compute_p_me_t.py  extend_p_me_t.py  sscx_cellwise_petilla_etypes.py  tools.py
special_region_override/: densities_override.py  special_regions_cell_types.numbers
(+11 files in other folders)
